force-app/main/default/objects/Knowledge_Article_Version_v1_index__dlm/Knowledge_Article_Version_v1_index__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Semantic</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Knowledge Article Version v1 index</labelOverride>
        <masterLabel>Knowledge Article Version v1 index</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Vector_Embedding</objectCategory>
    </mktDataModelAttributes>
</CustomObject>