force-app/main/default/objects/Knowledge_Article_Version_v1_index__dlm/fields/Category_c__c.field-meta.xml
<CustomField>
    <fullName>Category_c__c</fullName>
    <label>Category</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Category</labelOverride>
        <masterLabel>Category</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>