force-app/main/default/objects/Knowledge_Article_Version_v1_index__dlm/fields/IsLatestVersion__c.field-meta.xml
<CustomField>
    <fullName>IsLatestVersion__c</fullName>
    <label>Is Latest Version</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Is Latest Version</labelOverride>
        <masterLabel>Is Latest Version</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>