force-app/main/default/objects/Knowledge_Article_Version_v1_index__dlm/fields/rel_1754500310342_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1754500310342_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge_Article_Version_v1_index_S_rel</label>
    <referenceTo>Knowledge_Article_Version_v1_chunk__dlm</referenceTo>
    <relationshipLabel>Knowledge_Article_Version_v1_index_S_rel</relationshipLabel>
    <relationshipName>rel_1754500310342_end</relationshipName>
    <type>Lookup</type>
</CustomField>